[gd_scene format=3 uid="uid://bi2oaoxrcmttm"]

[ext_resource type="Script" uid="uid://bpvtly15ln51t" path="res://entities/game/animated_rich_text/scripts/AnimatedText.gd" id="1_e40io"]
[ext_resource type="Script" uid="uid://dlu1f0smtal4e" path="res://entities/game/animated_rich_text/scripts/AnimatedRichtText.gd" id="1_u65rn"]
[ext_resource type="AudioStream" uid="uid://ctjq1ihqaqsqu" path="res://assets/audio/effect/letter_written.ogg" id="2_u65rn"]
[ext_resource type="Texture2D" uid="uid://cg0l7tvqmtghr" path="res://assets/sprites/sheet_white1x.png" id="3_5qj5y"]
[ext_resource type="Script" uid="uid://b1muqfd0npxnt" path="res://entities/game/animated_rich_text/scripts/TutorialContinueButton.gd" id="4_geyfo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ynyq3"]
atlas = ExtResource("3_5qj5y")
region = Rect2(410, 315, 32, 20)

[node name="AnimatedRichText" type="VBoxContainer" unique_id=873433623]
script = ExtResource("1_u65rn")

[node name="Body" type="RichTextLabel" parent="." unique_id=1416319131]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "BODY"
fit_content = true
autowrap_mode = 2
visible_characters_behavior = 1
script = ExtResource("1_e40io")
letter_place_sound = ExtResource("2_u65rn")
sound_db_change = -15.0

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=288432057]
custom_minimum_size = Vector2(42, 30)
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextureButton" type="TextureButton" parent="MarginContainer" unique_id=258480674]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture_normal = SubResource("AtlasTexture_ynyq3")
stretch_mode = 3
script = ExtResource("4_geyfo")
pixels_to_move = 5.0
animation_speed = 1.5

[connection signal="append_new_text" from="." to="Body" method="add_animated_text"]
[connection signal="initial_text_changed" from="." to="Body" method="set_initial_text"]
[connection signal="animation_state_changed" from="Body" to="." method="animation_state_changed"]
[connection signal="current_text_displayed" from="Body" to="MarginContainer/TextureButton" method="show"]
[connection signal="no_text_left" from="Body" to="MarginContainer/TextureButton" method="hide"]
[connection signal="text_getting_animated" from="Body" to="MarginContainer/TextureButton" method="hide"]
[connection signal="pressed" from="MarginContainer/TextureButton" to="Body" method="roll_in_next_text"]
